# system-panel

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: hyprland.rs  main.rs  style.css  upower.rs
