[package]
name = "system-panel-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
futures = "0.3.30"
gdk = { version = "0.7.3", package = "gdk4", features = ["v4_12"] }
glib = "0.18.3"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
gtk-layer-shell = { version = "0.2.0", package = "gtk4-layer-shell" }
hyprland = "0.3.13"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "sync", "parking_lot"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }
